<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HalfTransparent"
    tools:context="com.arif.otp.Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/lokasi_lembaga"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Alamat" />

        <EditText
            android:id="@+id/edtAlamat"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text|textMultiLine"
            android:background="@drawable/btn_popup"
            android:layout_marginBottom="10dp"
            android:gravity="top"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nama_dusun" />

        <EditText
            android:id="@+id/edtNmDusun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:hint="@string/nama_dusun"
            android:inputType="text"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/provinsi" />

        <EditText
            android:id="@+id/edtProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provinsi"
            android:inputType="text"
            android:textSize="15dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/kecamatan" />

            <EditText
                android:id="@+id/edtKecamatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kecamatan"
                android:inputType="text"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/kabupaten" />

            <EditText
                android:id="@+id/edtKabupaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kabupaten"
                android:inputType="text"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>


        <EditText
            android:id="@+id/edtNoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nomor_telp"
            android:inputType="text"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="text"
            android:textSize="15dp" />

        

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_welcom"
            android:text="@string/simpan"
            android:textAllCaps="false"
            android:textColor="@color/TextBtn" />

        <TextView
            android:id="@+id/tvKembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/kembali" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
